# weather-telegram-bot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 680eeee35260_create_user_images.py  7138c51f12e8_change_user_loc_user_id_unique_to_true.py  a368f834d099_.py  abda8af456a5_add_two_tables_user_user_loc.py
locales/: SQLW.pot
locales/en/LC_MESSAGES/: SQLW.po
locales/ru/LC_MESSAGES/: SQLW.po
main_bot/: __main__.py  config.py  init.py
main_bot/data/: config.py
main_bot/database/: __init__.py  location_table.py  updown.py  user_images_table.py  user_table.py
main_bot/filters/: __init__.py  content_type_filter.py  settings_word.py  weather_current_word.py  weather_history_word.py
main_bot/handlers/: __init__.py  error_handle.py  main_menu.py  settings_handl.py  start_handl.py  trash.py  weather_current.py  weather_history.py
main_bot/middlewares/: __init__.py  chain_middleware.py  chat_action_middleware.py  i18n_middleware.py  sql_middleware.py  token_middleware.py
main_bot/sevices/: __init__.py  geopy_nominatim.py
main_bot/sevices/gismeteo_service/: __init__.py  classes.py  gismeteo_API.py  gismeteo_draw.py
main_bot/utils/: __init__.py  cli.py  formating.py  handls_keyboards.py  redis_static.py  set_commands.py  states.py
script/: pre_form_entrypoint.sh
