[tool.poetry]
name = "SQLW"
version = "0.1.0"
description = ""
authors = ["JokIF <jokifoki2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
gino = "^1.0.1"
loguru = "^0.6.0"
icecream = "^2.1.3"
geopy = "^2.3.0"
tenacity = "^8.1.0"
psycopg2 = "^2.9.5"
alembic = "^1.9.4"
envparse = "^0.2.0"
redis = "^4.5.4"
aioredis = "^2.0.1"
ujson = "^5.7.0"
pillow = "^9.5.0"
aiogram = {git = "https://github.com/aiogram/aiogram.git"}
babel = "^2.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
